# ClusterChatServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autobuild.sh
config/: database.cnf
include/: logger.hpp  public.hpp
include/client/: messageHandler.hpp  receiverThread.hpp  session.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/database/: CommonConnectionPool.hpp  Connection.hpp  database.hpp
include/server/model/: friend.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessage.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  messageHandler.cpp  receiverThread.cpp  session.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: CommonConnectionPool.cpp  Connection.cpp  database.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
